--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 PORT=3000
 
 # no trailing slash
+APP_URL=https://api.blueberrymc.net
+
 # this is not api url, this is the url of the website (this is used for cors)
-APP_URL=https://blueberrymc.net
+ORIGIN_URL_REGEX=https://(?:www\.)?blueberrymc\.net
 
 # mysql server configuration
 DB_HOST=localhost
